--- a/journal/202012.md
+++ b/journal/202012.md
@@ -347,43 +347,25 @@ During the 48 days of DCRDEX operation it has [traded](https://ournetwork.substa
 
 ## Relevant External
 
-{ cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
+The Cover Protocol, a DeFi insurance project which "allows DeFi users to be protected against smart contract risk", was [hacked](https://www.coindesk.com/cover-protocol-plans-new-token-after-attack) and the attacker minted 40 quintillion COVER tokens, liquidating these for $4 million, but later returning the funds to the smart contract. The team are now looking at creating a new version of the COVER token with a snapshot to refund COVER holders, because otherwise those extra 40 quintillion tokens would mess up the tokenomics.
 
-The Cover Protocol, which "allows DeFi users to be protected against smart contract risk", was [hacked](https://www.coindesk.com/cover-protocol-plans-new-token-after-attack) and the attacker minted 40 quintillion COVER tokens, liquidating these for $4 million, but later returning the funds to the smart contract. The team are now looking at creating a new version of the COVER token with a snapshot to refund COVER holders, because otherwise those extra 40 quintillion tokens would mess up the tokenomics.
-
-Nexus Mutual's CEO was hacked for $.8.3 million when an attacker tricked him into signing a transaction that sent all his NXM to the attacker's wallet. The attacker [laundered](https://coingeek.com/nexus-mutual-attacker-cashes-out-3-million/) $2.7 million to BTC, and this sent the NXM price lower, they then sent a message on the Ethereum blockchain offering to return the rest (so NXM could avoid further pain) for a [ransom](https://coingeek.com/nexus-mutual-attacker-wants-3-million-in-ransom-money/) of $2.8 million in ETH. 
+Nexus Mutual's CEO was hacked for $8.3 million when an attacker tricked him into signing a transaction that sent all his NXM to the attacker's wallet. The attacker [laundered](https://coingeek.com/nexus-mutual-attacker-cashes-out-3-million/) $2.7 million to BTC, and this sent the NXM price lower, they then sent a message on the Ethereum blockchain offering to return the rest (so NXM could avoid further pain) for a [ransom](https://coingeek.com/nexus-mutual-attacker-wants-3-million-in-ransom-money/) of $2.8 million in ETH.
 
 December's top DeFi rug pull was [Compounder finance](https://www.coindesk.com/compounder-developers-implicated-alleged-smart-contract-rug-pull), whose devs absconded with $10.8 million of investor funds after utilizing a hidden backdoor in the contracts.
 
 December's top flash loan attack victim was [Warp Finance](https://decrypt.co/52125/warp-finance-recovers-5-8-million-days-after-hack), with the exploit weighing in at $7.7 million, but $5.85 million is being returned to holders. This is arguably December's top DeFi hack refund too, but COVER is a contender for that title because although the dollar amount being returned was smaller, it represented a ridiculous proportion of the COVER supply.
 
-{ governance, funding, chain forks, community splits }
-
-Gitcoin ended a [strong 2020](https://gitcoin.co/blog/gitcoin-year-in-review/) with its 8th round of Ethereum funding seeing a matching pool of $450K, and also the first round of non-Ethereum funding for Zcash projects was [completed](https://electriccoin.co/blog/zcash-gitcoin-grants-round-1-retrospective/), dispensing a $25K matching pool from Zcash Foundation but attracting just 156 donations totalling $2,137. 
-
-{ DEX }
-
-{ relevant exchanges and websites }
+Gitcoin ended a [strong 2020](https://gitcoin.co/blog/gitcoin-year-in-review/) with its 8th round of Ethereum funding seeing a matching pool of $450K, and also the first round of non-Ethereum funding for Zcash projects was [completed](https://electriccoin.co/blog/zcash-gitcoin-grants-round-1-retrospective/), dispensing a $25K matching pool from Zcash Foundation but attracting just 156 donations totalling $2,137.
 
 A bill was [introduced](https://www.coindesk.com/us-lawmakers-introduce-bill-that-would-require-stablecoin-issuers-to-obtain-bank-charters) in US Congress that would require stablecoin issuers to obtain bank charters, requiring approval from the Federal Reserve and various other bodies before circulating any coins.
 
 The front line in crypto regulations then [shifted](https://www.coindesk.com/self-hosted-bitcoin-wallets-become-front-line-in-fight-over-crypto-regulations) to "self-hosted wallets" (i.e. any self-custodied crypto) and the degree of due diligence that exchanges are required to carry out on transactions involving these questionable entities.
 
-Bittrex delisting privacy coins DASH ZEC XMR:
+Bittrex announced that it will be [delisting](https://www.coindesk.com/bittrex-to-delist-privacy-coins-monero-dash-and-zcash) privacy coins Monero, Zcash and Dash on Jan 15, without stating specific reason for delisting. Around a month before that the same coins have been [delisted](https://www.coindesk.com/shapeshift-delists-privacy-coin-zcash-over-regulatory-concerns) by ShapeShift.
 
-- https://www.coindesk.com/bittrex-to-delist-privacy-coins-monero-dash-and-zcash
-- also delisted by ShapeShift https://www.coindesk.com/shapeshift-delists-privacy-coin-zcash-over-regulatory-concerns
-
-XRP delisting following the SEC lawsuit:
-
-- https://bittrex.zendesk.com/hc/en-us/articles/360054838991-XRP-Market-Removal-January-15-2021
-- Coinbase too? https://www.financemagnates.com/cryptocurrency/news/bittrex-to-delist-all-xrp-pairs-price-slips-to-0-20/
-- https://decrypt.co/52855/even-bittrex-is-halting-trading-of-xrp
-- this shows that raising funds may backfire years after the ICO and that truly long-term oriented currencies should avoid that
+Bittrex also became the eleventh exchange to [delist](https://decrypt.co/52855/even-bittrex-is-halting-trading-of-xrp) XRP, a week after US SEC charged Ripple Labs with raising $1.3 billion by selling the coin in unregistered securities sales. This shows that raising funds is a long-term systemic risk that may backfire years after the ICO.
 
 In an effort to shake off regulators, Facebook's Libra [rebranded](https://www.forbes.com/sites/jasonbrett/2020/12/02/facebooks-libra-renamed-to-diem-prior-to-stablecoin-launch) to Diem and dropped the aspiration of being backed by a basket of currencies in favor of straight USD backing.
-
-{ other: regulations, privacy, security, fun }
 
 Ledger's leak of customer data, originally reported in July, has now been [dumped](https://cointelegraph.com/news/ledger-data-leak-a-simple-mistake-exposed-270k-crypto-wallet-buyers) publicly. In the original announcement Ledger stated that more detailed information such as physical address had been accessed for 9.5K customers, but it seems [now](https://www.ledger.com/message-ledgers-ceo-data-leak/) that this information was harvested for 272K customers.
 
