--- a/journal/202012.md
+++ b/journal/202012.md
@@ -4,8 +4,11 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ introduction, major news of the month ordered by impact, don't put any links here }
+Happy New Year everyone!
 
+December highlights:
+
+- { more fixing and polishing of v1.6 }
 - { on-chain metrics peaking }
 
 ## Development
@@ -43,11 +46,11 @@ In other news, there have been commits on Dec 30 and Jan 1 but thankfully none o
 
 In progress:
 
-- ability to [import](https://github.com/decred/dcrwallet/pull/1945) voting accounts derived from a different seed { for Trezor staking support I guess? }
+- ability to [import](https://github.com/decred/dcrwallet/pull/1945) voting accounts derived from a different seed (to support Trezor staking)
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-- added button to mix [all funds](https://github.com/decred/decrediton/pull/3041) to the Privacy page
+- added button to mix [all funds](https://github.com/decred/decrediton/pull/3041)
 - added 1.6 [release notes](https://github.com/decred/decrediton/pull/3048) and animated images
 - updated translations (Arabic, Chinese, German, Japanese, Italian, Polish, Spanish)
 - ~23 fixes and UI tweaks
@@ -57,15 +60,15 @@ In progress:
 **[Politeia](https://github.com/decred/politeia)**
 
 - removed [CSRF](https://github.com/decred/politeia/pull/1356) on public routes to prevent the possibility to link trickled votes by the CSRF token. The privacy impact was minimal: linking CSRF tokens to trickled votes would require writing additional code, since it is not done automatically by the CSRF library used.
-- new `politeiavoter` command to [verify](https://github.com/decred/politeia/pull/1355) votes
 - end-to-end UI tests for proposal [editing](https://github.com/decred/politeiagui/pull/2227)
 - removed annoying Logout modal and moved the rarely used "Logout permanently" function to Account tab
+- new `politeiavoter` command to [verify](https://github.com/decred/politeia/pull/1355) votes
 - UX improvements for CMS invoice handling and review
 - Politeia and CMS bug fixes
 
 tlog integration update from @lukebp:
 
-> The ability to retrieve the full timestamp for any piece of user submitted data has been added. Frontend work for this is still ongoing. The backend tlog branch is now feature complete and we'll be starting the code review process.
+> The ability to retrieve the full timestamp (inclusion proof) for any piece of user submitted data has been added. Frontend work for this is still ongoing. The backend tlog branch is now feature complete and we'll be starting the code review process.
 
 **[vspd](https://github.com/decred/vspd)**
 
@@ -75,9 +78,9 @@ tlog integration update from @lukebp:
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- [single miner](https://github.com/decred/dcrpool/pull/274) endpoint { what does this do? }
+- [single miner](https://github.com/decred/dcrpool/pull/274) endpoint
 - save [client info](https://github.com/decred/dcrpool/pull/293) in the database and make it available on any dcrpool instance
-- support for NiceHash pool [validator](https://github.com/decred/dcrpool/pull/294) (allows it to connect to dcrpool and query basic stats) { is this description correct? }
+- support for NiceHash pool [validator](https://github.com/decred/dcrpool/pull/294) (allows it to connect to dcrpool and query basic stats)
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
@@ -102,10 +105,10 @@ Patch release [v0.1.4](https://github.com/decred/dcrdex/milestone/10) is getting
 Merged in dcrlibwallet shared library:
 
 - [vspd](https://github.com/planetdecred/dcrlibwallet/pull/163) support
-- method to get info about connected SPV [peers](https://github.com/planetdecred/dcrlibwallet/pull/160)
+- method to query information about connected SPV [peers](https://github.com/planetdecred/dcrlibwallet/pull/160)
 - dependency upgrades and bug fixes
 
-Note that features added to dcrlibwallet become available for dcrandroid, dcrios and godcr (assuming they add UI for it).
+Note that features added to dcrlibwallet become available for consumption by dcrandroid, dcrios and godcr, assuming these apps add necessary UIs.
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
@@ -119,13 +122,13 @@ Note that features added to dcrlibwallet become available for dcrandroid, dcrios
 - UI tweaks
 - bug fixes and optimizations
 
-APIs for overlaying widgets is required to fully implement the intended designs for godcr. This was brought to the attention of the Gio team on their Slack and is being treated as a priority.
+API for overlaying widgets is required to fully implement the intended designs for godcr. This was brought to the attention of the Gio team on their Slack and is being treated as a priority.
 
 **[tinydecred](https://github.com/decred/tinydecred)**
 
 In progress:
 
-- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet that was at wallet.decred.org. The script has already helped to recover someone's mainnet funds.
+- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from old Copay web wallets (one was previously at wallet.decred.org). The script has already helped to recover someone's mainnet funds.
 
 **[dcrros](https://github.com/decred/dcrros)**
 
@@ -142,7 +145,7 @@ Other:
 
 ## People
 
-Welcome to new first time contributors with code merged to master:  @piotrdelikat ([decrediton](https://github.com/decred/decrediton/commits?author=piotrdelikat)).
+Welcome to new first time contributors with code merged to master: @piotrdelikat ([decrediton](https://github.com/decred/decrediton/commits?author=piotrdelikat)).
 
 Community stats as of Jan 2:
 
@@ -311,7 +314,7 @@ Translations:
 Other non-English content:
 
 - "The Decred cryptocurrency increased by 50% and surpassed DeFi coins" ([es.cointelegraph.com](https://es.cointelegraph.com/news/the-decred-cryptocurrency-increased-by-50-and-surpassed-defi-coins))
-- @arij recorded a greatly improved  Decred introduction in Arabic ([youtube](https://www.youtube.com/watch?v=k6xXL_ttSDI))
+- @arij recorded a greatly improved Decred introduction in Arabic ([youtube](https://www.youtube.com/watch?v=k6xXL_ttSDI))
 
 ## Community Discussions
 
