--- a/journal/202012.md
+++ b/journal/202012.md
@@ -209,7 +209,7 @@ Note that Ultravsp had to migrate from ultrapool.eu to a UK domain [ultravsp.uk]
 
 Bittrex [added](https://twitter.com/BittrexExchange/status/1341801493964308482) an [instant exchange](https://bittrex.com/instant) feature that allows to quickly buy assets with a debit card or exchange's fiat balance. DCR was reported to work.
 
-Binance has enabled [margin trading](https://www.binance.com/en/support/announcement/d3614081a4254d1c815eb07e09f6cda8) for DCR/BTC and DCR/USDT, and announced a 1-week "zero-interest promotion for borrowing DCR". ([discussion](https://www.reddit.com/r/decred/comments/k8gy0d/margin_trading_for_dcr_enabled_on_binance/)) :villain:
+Binance has enabled [margin trading](https://www.binance.com/en/support/announcement/d3614081a4254d1c815eb07e09f6cda8) for DCR/BTC and DCR/USDT, and announced a 1-week "zero-interest promotion for borrowing DCR". ([discussion](https://www.reddit.com/r/decred/comments/k8gy0d/margin_trading_for_dcr_enabled_on_binance/)) :supervillain:
 
 [MXC Exchange](https://www.mxc.com/) [added](https://twitter.com/MXC_Exchange/status/1334707659900035075) 5x leverage margin trading DCR/USDT pair in addition to regular DCR/USDT pair they listed in 2019.
 
@@ -217,7 +217,7 @@ Turkish exchange [Bitexen](https://www.bitexen.com/) [announced](https://twitter
 
 Malta-based instant exchange aggregator [Swapzone](https://swapzone.io/) has DCR support since [May](https://twiter.com/swapzoneio/status/1263049492963774465) or earlier but in December it got on our radar and was [added](https://github.com/decred/dcrweb/pull/937) to decred.org [exchanges](https://decred.org/exchanges/) page.
 
-Upbit has disabled deposits and soon [delisted](https://www.reddit.com/r/decred/comments/kfu4sb/whats_going_on_in_korea_upbit/) DCR, apparently being concerned that DCR will soon protect the privacy of individuals too well.
+Korean Upbit has [delisted](https://www.reddit.com/r/decred/comments/kfu4sb/whats_going_on_in_korea_upbit/) DCR, apparently in disagreement with Decred's mission to protect individual privacy. :supervillain:
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
