--- a/journal/202012.md
+++ b/journal/202012.md
@@ -223,21 +223,21 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-Decred in Spanish team published the final [6th report](https://github.com/decredcommunity/proposals/blob/master/proposals/3c02b67/updates/20201211.md) for their 2nd proposal. 3rd proposal got a significant 54.5% and 50.2% Yes votes but did not reach the required threshold of 60%. The team is collecting [feedback](https://www.reddit.com/r/decred/comments/kkb97s/what_are_your_thoughts_on_the_decred_in_spanish/) on Reddit and planning what to do next.
+Decred in Spanish team published the final [6th report](https://github.com/decredcommunity/proposals/blob/master/proposals/3c02b67/updates/20201211.md) for their 2nd proposal. Voting has ended for their 3rd proposal with significant 54.5% and 50.2% Yes votes but did not reach the required threshold of 60%. The team is collecting [feedback](https://www.reddit.com/r/decred/comments/kkb97s/what_are_your_thoughts_on_the_decred_in_spanish/) on Reddit and planning what to do next.
 
 @michae2xl published the final [report](https://github.com/decredcommunity/proposals/blob/master/proposals/bc20f98/updates/20210105.md) that covers December activities for the Brazil marketing proposal.
 
 Monde PR's achievements for December:
 
-- Created and pitched two story ideas to finance and crypto publications
+- created and pitched two story ideas to finance and crypto publications
 
 News coverage secured by Monde PR:
 
 - @jy-p was interviewed by [NASDAQ Trade Talks](https://www.nasdaq.com/videos/tradetalks:-how-can-blockchain-can-be-used-in-elections) talking about Decred's use in Brazil's election. The interview was mentioned in subsequent articles in [Coin Journal](https://coinjournal.net/news/decred-bounces-off-42-after-spiking-50/), [Crypto Potato](https://cryptopotato.com/decred-dcr-pumps-50-as-social-sentiment-surges/), [Coin Market Cap](https://coinmarketcap.com/headlines/signals/decred-co-founder-on-nasdaq-tradetalks-decred/) and [CryptoMode](https://cryptomode.com/5-reasons-why-you-shouldnt-overlook-decred-dcr/)
-- Details of the DCR launch and Decred's use in Brazil's election were featured in [Cointelegraph](https://cointelegraph.com/news/bitcoin-bull-market-pulls-kusama-ksm-decred-dcr-and-qtum-price-higher)
+- details of the DCR launch and Decred's use in Brazil's election were featured in [Cointelegraph](https://cointelegraph.com/news/bitcoin-bull-market-pulls-kusama-ksm-decred-dcr-and-qtum-price-higher)
 - @jy-p was interviewed by the [Geek Insider Podcast](https://www.youtube.com/watch?v=mYK_Awn1wTk) talking about the origin of Decred, the DCRDEX launch and Decred's use in Brazil's election
-- Details of the DCRDEX launch were also featured in [Brave New Coin](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)
-- Comments from @jy-p's Cointelegraph interview about Bitcoin bull and bear cycles were featured in [Forex Academy](https://www.forex.academy/how-to-spot-bitcoin-bull-bear-cycles-beginners-edition/) and [Inside Bitcoin](https://insidebitcoins.com/news/bitcoin-btc-price-prediction-november-29-2020-2)
+- details of the DCRDEX launch were also featured in [Brave New Coin](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)
+- comments from @jy-p's Cointelegraph interview about Bitcoin bull and bear cycles were featured in [Forex Academy](https://www.forex.academy/how-to-spot-bitcoin-bull-bear-cycles-beginners-edition/) and [Inside Bitcoin](https://insidebitcoins.com/news/bitcoin-btc-price-prediction-november-29-2020-2)
 - @jy-p's comments about Ledger's security challenges were featured in [The Union Journal](https://www.theunionjournal.com/ledger-cto-discusses-wallets-safety-after-multiple-security-setbacks/)
 
 ## Events
