drop todos and intro ideas

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -10,6 +10,9 @@ December highlights:
 
 - { more fixing and polishing of v1.6 }
 - { on-chain metrics peaking }
+- { a bunch of marketing proposals ending December }
+- { a bunch of new listings and delistings }
+- { incredible price action of BTC and DCR }
 
 ## Development
 
@@ -55,7 +58,7 @@ In progress:
 - updated translations (Arabic, Chinese, German, Japanese, Italian, Polish, Spanish)
 - ~23 fixes and UI tweaks
 
-{ will there be an RC5? }
+There will very likely be an RC5 soon fixing a few remaining issues.
 
 **[Politeia](https://github.com/decred/politeia)**
 
@@ -248,7 +251,7 @@ Attended:
 - Dec 5 - [World Blockchain Conference](https://decredcommunity.github.io/events/index/20201205.1) - Wuhan, China. There was no formal "event" but @Dominic met with old friends at Cobo Wallet, F2Pool and others, to introduce them to the upcoming v1.6 and new consensus rules.
 - Dec 10 - [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - Internet. Most of the Decred in Spanish team reviewed 1 year working in the DAO, the good, the bad, the challenges, and what's coming for 2021.
 - Dec 11 - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - Internet. Co-organized by Paxful Latam. Decred was a VIP sponsor. @elian presented common talking points of Decred and the upcoming Hidden Hydra, which got 1.6K views on Facebook and ~800 on YouTube. In another panel he talked about how to prevent crypto scams.
-- Dec 16 - [UAM Xochimilco](https://twitter.com/addcade/status/1338544856344317953) - Mexico City, Mexico. @adcade talked about Decred's organization and Politeia at Aula Multimedia lab of the UAM Xochimilco university. { did it happen? }
+- Dec 16 - [UAM Xochimilco](https://twitter.com/addcade/status/1338544856344317953) - Mexico City, Mexico. @adcade talked about Decred's organization and Politeia at Aula Multimedia lab of the UAM Xochimilco university.
 - Dec 18 - [New Year at CR!](https://decredcommunity.github.io/events/index/20201218.1) - Internet. Crypto Resources Academy organized a year-end event and invited partners like Decred, Bitso, Prime XBT DAI, Binance, and others. During the governance panel @elian presented how Decred governance works, the role of Politeia and the decentralization of the Treasury.
 - Dec 24 - [Decred AMA](https://decredcommunity.github.io/events/index/20201224.1) - Internet. This AMA for OKEx in Spanish community took place on their [Telegram](https://t.me/OKExLATAM) with ~500 users. Over 30 questions were asked about Decred's governance, privacy, future developments, history and the DEX. There was also a DCR giveaway ($20 from OKEx and $30 from Decred in Spanish). Over 30 new members joined [@DecredES](https://t.me/DecredES) TG.
 - Dec 30 - [Decred in Spanish New Year Giveaway](https://decredcommunity.github.io/events/index/20201230.1) - Internet. To participate, people needed to join @DecredES Telegram and tell what they like about Decred. Out of 28 commenters, 9 best were selected based on the knowledge and understanding of the project and received 3 DCR in total.
